public/resources/style.css
* {
  box-sizing: border-box;
}

html {
}

body {
  font-family: 'Roboto', sans-serif;
  font-size: 1.4em;
  color: #444;
  font-weight: 300;
	letter-spacing: 0.06em;
}

pre, code {
  padding: 0;
  border: solid 1px #C3C3C3;
  border-radius: 3px;
  background-color: #EEE;
}

pre code {
  border: none;
}

code {
  padding: 0 4px;
}

pre {
  padding: 6px 6px;
}

h1, h2, h3, h4, h5, h6 {
	margin-top: 0;
	margin-bottom: 1rem;
	font-weight: 100;
}

h1 { font-size: 2.6em; line-height: 1.2;  letter-spacing: -.15rem; }
h2 { font-size: 2.2em; line-height: 1.25; letter-spacing: -.15rem; }
h3 { font-size: 1.8em; line-height: 1.3;  letter-spacing: -.1rem;  }
h4 { font-size: 1.4em; line-height: 1.35; letter-spacing: -.06rem; }
h5 { font-size: 1.2em; line-height: 1.4;  letter-spacing: -.03rem; }
h6 { font-size: 1em;   line-height: 1.45; letter-spacing: -.01rem; }

strong {
  font-weight: 700;
}

/* Grid */
.container {
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 40px;
  padding-top: 10px;
  max-width: 960px;
}

.column {
  padding-left: 20px;
  padding-right: 20px;
}

.container:after,
.row:after {
	display: table;
	content: "";
	clear: both;
}

/* Header */

.header {
  margin-bottom: 60px;
  width: auto;
  height: auto;
  background-image: url('./header.jpg');
  background-position: center center;
  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
}

.header-body {
  height: auto;
  background-color: rgba(255, 255, 255, 0.8);
  text-align: center;
  padding: 100px 0;
}

.header-body h1 {
  font-size: 3em;
}

.header-body h2 {
  font-size: 1.6em;
}

@media (min-width:720px) {
  .header-body h1 {
    font-size: 6em;
  }

  .header-body h2 {
    font-size: 2.6em;
  }
}

